--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -16,6 +16,8 @@ html, body {
   margin: 0;
   background: #343a40;
   float: right;
+  color: white;
+  font-size: 25px;
   font-family: 'Titillium Web', serif;
     border: 2px solid blue;
 }
@@ -25,6 +27,7 @@ position: absolute;
 width: 15.8%;
 height:300px;
 top: 0%;
+font-size: 20px;
 bottom: 50%;
 left: .5%;
 background: #343a40;
@@ -37,6 +40,7 @@ position: absolute;
 width: 15.8%;
 height:300px;
 top: 42.5%;
+font-size: 20px;
 bottom: 0%;
 left: .5%;
 background: #343a40;
@@ -60,6 +64,7 @@ z-index: 1000;
 position: absolute;
 width: 49.4%;
 height:100px;
+font-size: 8px;
 top: 85%;
 right:0.5%;
 bottom: 0%;
